[package]
name = "websocket_practice"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
url = "2.5.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
reqwest = "0.12.9"
uuid = "1.11.0"
